--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-  background-image: url(image2.jpeg);
+  background-image: url(/Images/image2.jpeg);
   width: 25rem;
   height: 30rem;
   color: #fff;
